# IEP-LAB

Iep1/: CMakeLists.txt
Iep1/inc/: Meniu.hpp  Restaurant.hpp
Iep1/src/: Meniu.cpp  Necopiabil.cpp  Restaurant.cpp  a.out  main.cpp
